Prevent selection of elements of the app

--- a/src/renderer/src/assets/app.css
+++ b/src/renderer/src/assets/app.css
@@ -59,6 +59,6 @@
     @apply w-full h-full;
   }
   body {
-    @apply bg-background text-foreground w-full h-full;
+    @apply bg-background text-foreground w-full h-full select-none;
   }
 }
